--- a/style.css
+++ b/style.css
@@ -86,7 +86,8 @@ body {
 }
 
 .video-gallary {
-    margin: 0 40px;
+    margin-left: auto;
+    margin-right: auto;
     box-shadow: 0 0 4px 2px gray;
 }
 
